--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@apollo/client": "^3.7.10",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -17,6 +18,7 @@
     "graphql": "^16.6.0",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
