--- a/package.json
+++ b/package.json
@@ -14,20 +14,27 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "antd": "^5.3.0",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^1.3.4",
     "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
     "react-infinite-scroller": "^1.2.6",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "recoil": "^0.7.7",
+    "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^17.0.2",
+    "@types/lodash": "^4.14.192",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
     "@types/react-infinite-scroller": "^1.2.3",
+    "@types/uuid": "^9.0.1",
     "typescript": "^5.0.2"
   }
 }
