--- a/package.json
+++ b/package.json
@@ -13,26 +13,41 @@
     "@apollo/client": "^3.7.10",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.0.1",
+    "@types/react-dates": "^21.8.3",
     "antd": "^5.3.0",
     "apollo-upload-client": "^17.0.0",
-    "axios": "^1.3.4",
+    "axios": "^1.3.6",
+    "dompurify": "^3.0.2",
     "graphql": "^16.6.0",
+    "graphql-request": "^6.0.0",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-datepicker": "^4.11.0",
+    "react-dates": "^21.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.43.9",
     "react-infinite-scroller": "^1.2.6",
+    "react-multiple-datepicker": "^0.1.0",
+    "react-quill": "^2.0.0",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.1.0"
   },
   "devDependencies": {
     "@types/apollo-upload-client": "^17.0.2",
+    "@types/dompurify": "^3.0.1",
     "@types/lodash": "^4.14.192",
     "@types/node": "17.0.2",
     "@types/react": "17.0.2",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/uuid": "^9.0.1",
     "typescript": "^5.0.2"
